--- a/descartes_light/CMakeLists.txt
+++ b/descartes_light/CMakeLists.txt
@@ -1,9 +1,15 @@
 cmake_minimum_required(VERSION 3.5.0)
-project(descartes_light VERSION 0.1.0 LANGUAGES CXX)
+
+# Extract package name and version
+find_package(cmake_common_scripts REQUIRED)
+extract_package_metadata(pkg)
+project(${pkg_extracted_name} VERSION ${pkg_extracted_version} LANGUAGES CXX)
+
 include(cmake/descartes_light_macros.cmake)
 
-set(CMAKE_CXX_VISIBILITY_PRESET hidden)
-set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
+if(WIN32)
+  set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+endif()
 
 find_package(OpenMP REQUIRED)
 
@@ -36,6 +42,7 @@ endif()
 descartes_variables()
 
 if(NOT MSVC)
+  initialize_code_coverage()
   add_code_coverage_all_targets(ENABLE ${DESCARTES_ENABLE_TESTING})
 endif()
 
