--- a/descartes_ikfast/package.xml
+++ b/descartes_ikfast/package.xml
@@ -3,11 +3,15 @@
   <name>descartes_ikfast</name>
   <version>0.1.0</version>
   <description>The descartes_ikfast package</description>
-
+  <author email="jmeyer1292@github.com">Jon Meyer</author>
   <author email="levi.armstrong@swri.org">Levi Armstrong</author>
   <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
-
+  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
   <license>Apache 2.0</license>
+
+  <!-- Following recommendations of REP 136 -->
+  <exec_depend>catkin</exec_depend>
+  <buildtool_depend>cmake</buildtool_depend>
 
   <depend>descartes_light</depend>
   <depend>libblas-dev</depend>
