--- a/descartes_samplers/package.xml
+++ b/descartes_samplers/package.xml
@@ -8,8 +8,13 @@
   <author email="levi.armstrong@swri.org">Levi Armstrong</author>
   <author email="jmeyer1292@github.com">Jon Meyer</author>
   <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
-
+  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
   <license>Apache 2.0</license>
+
+  <!-- Following recommendations of REP 136 -->
+  <exec_depend>catkin</exec_depend>
+  <buildtool_depend>cmake</buildtool_depend>
+
   <depend>descartes_light</depend>
   <depend>eigen</depend>
   <build_depend>cmake_common_scripts</build_depend>
