--- a/.github/workflows/focal_build.yml
+++ b/.github/workflows/focal_build.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-      - feature/CommandLanguage
   pull_request:
   schedule:
     - cron: '0 5 * * *'
@@ -19,7 +18,7 @@ jobs:
       OS_CODE_NAME: focal
       ROS_DISTRO: noetic
       ROS_REPO: main
-      TARGET_WORKSPACE: '. github:ros-industrial/cmake_common_scripts#master github:Jmeyer1292/opw_kinematics#master'
+      UPSTREAM_WORKSPACE: 'dependencies.rosinstall'
       ROSDEP_SKIP_KEYS: "iwyu cmake_common_scripts"
       CCACHE_DIR: "/home/runner/work/descartes_light/descartes_light/Focal-Build/.ccache"
       BEFORE_RUN_TARGET_TEST_EMBED: "source /root/target_ws/install/setup.bash"
