--- a/.github/workflows/xenial_build.yml
+++ b/.github/workflows/xenial_build.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-      - feature/CommandLanguage
   pull_request:
   schedule:
     - cron: '0 5 * * *'
@@ -19,11 +18,10 @@ jobs:
       OS_CODE_NAME: xenial
       ROS_DISTRO: kinetic
       ROS_REPO: main
-      TARGET_WORKSPACE: '. github:ros-industrial/cmake_common_scripts#master github:Jmeyer1292/opw_kinematics#master'
+      UPSTREAM_WORKSPACE: 'dependencies.rosinstall'
       ROSDEP_SKIP_KEYS: "iwyu cmake_common_scripts"
       CCACHE_DIR: "/home/runner/work/descartes_light/descartes_light/Xenial-Build/.ccache"
       TARGET_CMAKE_ARGS: "-DCMAKE_BUILD_TYPE=Debug -DDESCARTES_ENABLE_TESTING=ON"
-      AFTER_SCRIPT: 'catkin build -w $target_ws --no-deps --verbose descartes_ikfast --make-args test'
     steps:
       - uses: actions/checkout@v1
 
