--- a/.github/workflows/focal_build.yml
+++ b/.github/workflows/focal_build.yml
@@ -19,7 +19,7 @@ jobs:
       ROS_DISTRO: noetic
       ROS_REPO: main
       UPSTREAM_WORKSPACE: 'dependencies.rosinstall'
-      ROSDEP_SKIP_KEYS: "iwyu cmake_common_scripts"
+      ROSDEP_SKIP_KEYS: "iwyu ros_industrial_cmake_boilerplate"
       CCACHE_DIR: "/home/runner/work/descartes_light/descartes_light/Focal-Build/.ccache"
       BEFORE_RUN_TARGET_TEST_EMBED: "ici_with_unset_variables source /root/target_ws/install/setup.bash"
       TARGET_CMAKE_ARGS: "-DCMAKE_BUILD_TYPE=Debug -DDESCARTES_ENABLE_TESTING=ON"
