--- a/descartes_samplers/package.xml
+++ b/descartes_samplers/package.xml
@@ -16,7 +16,7 @@
 
   <depend>descartes_light</depend>
   <depend>eigen</depend>
-  <build_depend>cmake_common_scripts</build_depend>
+  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
 
   <export>
     <build_type>cmake</build_type>
