--- a/descartes_light/test/CMakeLists.txt
+++ b/descartes_light/test/CMakeLists.txt
@@ -1,8 +1,7 @@
 find_gtest()
 add_executable(${PROJECT_NAME}_utest utest.cpp)
 target_link_libraries(${PROJECT_NAME}_utest PRIVATE ${PROJECT_NAME} GTest::GTest GTest::Main)
-gtest_add_tests(${PROJECT_NAME}_utest "" AUTO)
-# add_gtest_discover_tests(${PROJECT_NAME}_utest)
+add_gtest_discover_tests(${PROJECT_NAME}_utest)
 add_dependencies(run_tests ${PROJECT_NAME}_utest)
 
 install(TARGETS ${PROJECT_NAME}_utest
