--- a/.github/workflows/windows_melodic_build.yml
+++ b/.github/workflows/windows_melodic_build.yml
@@ -34,4 +34,4 @@ jobs:
 
         vcs import --input "${{ github.workspace }}/src/descartes_light/dependencies.rosinstall" src/
 
-        catkin_make_isolated --cmake-args -DCMAKE_BUILD_TYPE=Release -DDESCARTES_ENABLE_TESTING=ON
+        catkin_make_isolated --cmake-args -DCMAKE_BUILD_TYPE=Release -DDESCARTES_ENABLE_TESTING=ON -DCMAKE_GTEST_DISCOVER_TESTS_DISCOVERY_MODE=PRE_TEST
