--- a/.github/workflows/windows_melodic_build.yml
+++ b/.github/workflows/windows_melodic_build.yml
@@ -10,10 +10,10 @@ on:
 
 jobs:
   windows_ci:
-    name: Melodic
+    name: Noetic
     runs-on: windows-latest
     env:
-      ROS_DISTRO: melodic
+      ROS_DISTRO: noetic
     steps:
     - uses: actions/checkout@v2
       with:
@@ -34,4 +34,4 @@ jobs:
 
         vcs import --input "${{ github.workspace }}/src/descartes_light/dependencies.rosinstall" src/
 
-        catkin_make_isolated --cmake-args -DCMAKE_BUILD_TYPE=Release -DDESCARTES_ENABLE_TESTING=ON -DDESCARTES_ENABLE_RUN_TESTING=ON
+        catkin_make_isolated --cmake-args -DCMAKE_BUILD_TYPE=Release -DDESCARTES_ENABLE_TESTING=ON
