Only initialize code coverage when testing is enabled

--- a/descartes_samplers/CMakeLists.txt
+++ b/descartes_samplers/CMakeLists.txt
@@ -15,7 +15,7 @@ endif()
 descartes_variables()
 
 if(NOT MSVC)
-  initialize_code_coverage()
+  initialize_code_coverage(ENABLE ${DESCARTES_ENABLE_TESTING})
   add_code_coverage_all_targets(ENABLE ${DESCARTES_ENABLE_TESTING})
 endif()
 
