--- a/descartes_light/package.xml
+++ b/descartes_light/package.xml
@@ -14,6 +14,7 @@
 
   <depend>libconsole-bridge-dev</depend>
   <depend>eigen</depend>
+  <depend>libomp-dev</depend>
   <build_depend>ros_industrial_cmake_boilerplate</build_depend>
 
   <export>
