Added normalized cost state evaluator

--- a/descartes_light/state_evaluators/CMakeLists.txt
+++ b/descartes_light/state_evaluators/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(${PROJECT_NAME}_state_evaluators src/euclidean_distance_state_evaluator.cpp)
+add_library(${PROJECT_NAME}_state_evaluators src/euclidean_distance_state_evaluator.cpp src/normalized_state_evaluator.cpp)
 target_link_libraries(${PROJECT_NAME}_state_evaluators PUBLIC ${PROJECT_NAME}_core)
 target_cxx_version(${PROJECT_NAME}_state_evaluators PUBLIC VERSION ${DESCARTES_CXX_VERSION})
 target_compile_options(${PROJECT_NAME}_state_evaluators PUBLIC ${DESCARTES_COMPILE_OPTIONS})
