--- a/descartes_light/edge_evaluators/CMakeLists.txt
+++ b/descartes_light/edge_evaluators/CMakeLists.txt
@@ -1,5 +1,9 @@
-add_library(${PROJECT_NAME}_edge_evaluators src/timing_edge_evaluator.cpp src/euclidean_distance_edge_evaluator.cpp
-                                            src/compound_edge_evaluator.cpp)
+add_library(
+  ${PROJECT_NAME}_edge_evaluators
+  src/timing_edge_evaluator.cpp
+  src/euclidean_distance_edge_evaluator.cpp
+  src/compound_edge_evaluator.cpp
+  src/normalized_edge_evaluator.cpp)
 target_link_libraries(${PROJECT_NAME}_edge_evaluators PUBLIC ${PROJECT_NAME}_core)
 target_cxx_version(${PROJECT_NAME}_edge_evaluators PUBLIC VERSION ${DESCARTES_CXX_VERSION})
 target_compile_options(${PROJECT_NAME}_edge_evaluators PUBLIC ${DESCARTES_COMPILE_OPTIONS})
