Update to use improved version of target_clang_tidy

--- a/descartes_light/core/CMakeLists.txt
+++ b/descartes_light/core/CMakeLists.txt
@@ -16,7 +16,11 @@ target_link_libraries(${PROJECT_NAME}_core INTERFACE Eigen3::Eigen)
 target_cxx_version(${PROJECT_NAME}_core INTERFACE VERSION ${DESCARTES_CXX_VERSION})
 target_compile_options(${PROJECT_NAME}_core INTERFACE ${DESCARTES_COMPILE_OPTIONS})
 target_compile_definitions(${PROJECT_NAME}_core INTERFACE ${DESCARTES_COMPILE_DEFINITIONS})
-target_clang_tidy(${PROJECT_NAME}_core ENABLE ${DESCARTES_ENABLE_CLANG_TIDY} ARGUMENTS ${DESCARTES_CLANG_TIDY_ARGS})
+target_clang_tidy(
+  ${PROJECT_NAME}_core
+  ENABLE ${DESCARTES_ENABLE_CLANG_TIDY}
+  WARNINGS_AS_ERRORS ${DESCARTES_ENABLE_TESTING}
+  CHECKS ${DEFAULT_CLANG_TIDY_CHECKS})
 target_code_coverage(
   ${PROJECT_NAME}_core
   INTERFACE
