--- a/descartes_light/samplers/CMakeLists.txt
+++ b/descartes_light/samplers/CMakeLists.txt
@@ -3,7 +3,11 @@ target_link_libraries(${PROJECT_NAME}_samplers PUBLIC ${PROJECT_NAME}_core)
 target_cxx_version(${PROJECT_NAME}_samplers PUBLIC VERSION ${DESCARTES_CXX_VERSION})
 target_compile_options(${PROJECT_NAME}_samplers PUBLIC ${DESCARTES_COMPILE_OPTIONS})
 target_compile_definitions(${PROJECT_NAME}_samplers PUBLIC ${DESCARTES_COMPILE_DEFINITIONS})
-target_clang_tidy(${PROJECT_NAME}_samplers ENABLE ${DESCARTES_ENABLE_CLANG_TIDY} ARGUMENTS ${DESCARTES_CLANG_TIDY_ARGS})
+target_clang_tidy(
+  ${PROJECT_NAME}_samplers
+  ENABLE ${DESCARTES_ENABLE_CLANG_TIDY}
+  WARNINGS_AS_ERRORS ${DESCARTES_ENABLE_TESTING}
+  CHECKS ${DEFAULT_CLANG_TIDY_CHECKS})
 target_code_coverage(${PROJECT_NAME}_samplers ALL ENABLE ${DESCARTES_ENABLE_CODE_COVERAGE})
 target_include_directories(${PROJECT_NAME}_samplers PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
                                                            "$<INSTALL_INTERFACE:include>")
