--- a/descartes_light/solvers/CMakeLists.txt
+++ b/descartes_light/solvers/CMakeLists.txt
@@ -26,6 +26,7 @@ endif()
 add_library(
   ${PROJECT_NAME}_solvers
   src/bgl/bgl_solver.cpp
+  src/bgl/dfs_sort_ladder_graph_solver.cpp
   src/ladder_graph/ladder_graph_solver.cpp
   src/ladder_graph/ladder_graph.cpp
   src/ladder_graph/ladder_graph_dag_search.cpp)
