Specified dependency on Boost

--- a/descartes_light/cmake/descartes_light-config.cmake.in
+++ b/descartes_light/cmake/descartes_light-config.cmake.in
@@ -8,6 +8,7 @@ include(CMakeFindDependencyMacro)
 find_dependency(Eigen3)
 find_dependency(OpenMP)
 find_dependency(console_bridge)
+find_dependency(Boost COMPONENTS graph)
 
 if(NOT TARGET OpenMP::OpenMP_CXX)
     find_dependency(Threads)
