--- a/descartes_light/cmake/descartes_light-config.cmake.in
+++ b/descartes_light/cmake/descartes_light-config.cmake.in
@@ -8,7 +8,12 @@ include(CMakeFindDependencyMacro)
 find_dependency(Eigen3)
 find_dependency(OpenMP)
 find_dependency(console_bridge)
-find_dependency(Boost COMPONENTS graph)
+
+if(${CMAKE_VERSION} VERSION_LESS "3.15.0")
+    find_package(Boost REQUIRED COMPONENTS graph)
+else()
+    find_dependency(Boost COMPONENTS graph)
+endif()
 
 if(NOT TARGET OpenMP::OpenMP_CXX)
     find_dependency(Threads)
