--- a/descartes_light/package.xml
+++ b/descartes_light/package.xml
@@ -16,6 +16,7 @@
   <depend>eigen</depend>
   <depend>libomp-dev</depend>
   <build_depend>ros_industrial_cmake_boilerplate</build_depend>
+  <build_depend>boost</build_depend>
 
   <export>
     <build_type>cmake</build_type>
