Migrated benchmark from unit test to stand-alone executable

--- a/descartes_light/test/CMakeLists.txt
+++ b/descartes_light/test/CMakeLists.txt
@@ -45,3 +45,6 @@ install(
   RUNTIME DESTINATION bin/tests
   LIBRARY DESTINATION lib/test
   ARCHIVE DESTINATION lib/test)
+
+# Benchmarks
+add_subdirectory(benchmarks)
