Parameterized Unit Test Type (#70)
* added new unit test type that parameterizes dof, number of waypoints and rungs

* applied clang-formatting

* computes some peformance metrics and created sampler creator utility function

* removed PerformanceResults struct from the unit test, now it just computes the time elapsed

* created benchmark_utils header file for holding various utilities for benchmarking planners

* Removed benchmark utils

* Created library for test sub-directory

* Updated unit test to use objects from test library

* Made factory method const

* Migrated benchmark from unit test to stand-alone executable

* Removed unused dof parameter in ladder graph

* Removed static keyword

Co-authored-by: Michael Ripperger <michael.ripperger@swri.org>

--- a/descartes_light/test/CMakeLists.txt
+++ b/descartes_light/test/CMakeLists.txt
@@ -1,9 +1,34 @@
+# Utilities Library
+add_library(${PROJECT_NAME}_test_utils src/utils.cpp src/solver_factory.cpp)
+target_link_libraries(${PROJECT_NAME}_test_utils PUBLIC ${PROJECT_NAME}_core ${PROJECT_NAME}_solvers)
+target_cxx_version(${PROJECT_NAME}_test_utils PUBLIC VERSION ${DESCARTES_CXX_VERSION})
+target_compile_options(${PROJECT_NAME}_test_utils PUBLIC ${DESCARTES_COMPILE_OPTIONS})
+target_compile_definitions(${PROJECT_NAME}_test_utils PUBLIC ${DESCARTES_COMPILE_DEFINITIONS})
+target_clang_tidy(
+  ${PROJECT_NAME}_test_utils
+  ENABLE ${DESCARTES_ENABLE_CLANG_TIDY}
+  WARNINGS_AS_ERRORS ${DESCARTES_ENABLE_TESTING}
+  CHECKS ${DEFAULT_CLANG_TIDY_CHECKS})
+target_include_directories(${PROJECT_NAME}_test_utils PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+                                                             "$<INSTALL_INTERFACE:include>")
+
+install(
+  TARGETS ${PROJECT_NAME}_test_utils
+  EXPORT ${PROJECT_NAME}-targets
+  RUNTIME DESTINATION bin
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib)
+
+install(DIRECTORY include/ DESTINATION include/)
+
+# Unit Tests
 find_gtest()
 add_executable(${PROJECT_NAME}_utest utest.cpp)
 target_link_libraries(
   ${PROJECT_NAME}_utest
   PRIVATE ${PROJECT_NAME}_edge_evaluators
           ${PROJECT_NAME}_solvers
+          ${PROJECT_NAME}_test_utils
           GTest::GTest
           GTest::Main)
 target_clang_tidy(
@@ -16,7 +41,10 @@ add_gtest_discover_tests(${PROJECT_NAME}_utest)
 add_dependencies(run_tests ${PROJECT_NAME}_utest)
 
 install(
-  TARGETS ${PROJECT_NAME}_utest
+  TARGETS ${PROJECT_NAME}_test_utils ${PROJECT_NAME}_utest
   RUNTIME DESTINATION bin/tests
-  LIBRARY DESTINATION lib/tests
-  ARCHIVE DESTINATION lib/tests)
+  LIBRARY DESTINATION lib/test
+  ARCHIVE DESTINATION lib/test)
+
+# Benchmarks
+add_subdirectory(benchmarks)
