--- a/descartes_light/edge_evaluators/CMakeLists.txt
+++ b/descartes_light/edge_evaluators/CMakeLists.txt
@@ -25,4 +25,5 @@ install(
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib)
 
-install(DIRECTORY include/${PROJECT_NAME}/ DESTINATION include/${PROJECT_NAME})
+# Install headers
+install(DIRECTORY include/ DESTINATION include/)
