Working ompl search using idx diff for distance

--- a/descartes_light/CMakeLists.txt
+++ b/descartes_light/CMakeLists.txt
@@ -11,14 +11,16 @@ descartes_variables()
 initialize_code_coverage(ENABLE ${DESCARTES_ENABLE_CODE_COVERAGE})
 add_code_coverage_all_targets(ENABLE ${DESCARTES_ENABLE_CODE_COVERAGE})
 
+find_package(ompl REQUIRED)
+
 add_subdirectory(core)
 add_subdirectory(bgl)
 
-if(DESCARTES_ENABLE_TESTING)
+#if(DESCARTES_ENABLE_TESTING)
   enable_testing()
   add_run_tests_target(ENABLE ${DESCARTES_ENABLE_RUN_TESTING})
   add_subdirectory(test)
-endif()
+#endif()
 
 # Package configuration
 install(EXPORT ${PROJECT_NAME}-targets NAMESPACE "descartes::" DESTINATION lib/cmake/${PROJECT_NAME})
