--- a/descartes_light/core/CMakeLists.txt
+++ b/descartes_light/core/CMakeLists.txt
@@ -1,8 +1,31 @@
 # Find dependency packages
 find_package(Eigen3 REQUIRED)
 find_package(ros_industrial_cmake_boilerplate REQUIRED)
+find_package(OpenMP REQUIRED)
+find_package(console_bridge)
 
 # Create targets if necessary
+if(NOT TARGET OpenMP::OpenMP_CXX)
+  find_package(Threads REQUIRED)
+  add_library(OpenMP::OpenMP_CXX IMPORTED INTERFACE)
+  set_property(TARGET OpenMP::OpenMP_CXX PROPERTY INTERFACE_COMPILE_OPTIONS ${OpenMP_CXX_FLAGS})
+  # Only works if the same flag is passed to the linker; use CMake 3.9+ otherwise (Intel, AppleClang)
+  set_property(TARGET OpenMP::OpenMP_CXX PROPERTY INTERFACE_LINK_LIBRARIES ${OpenMP_CXX_FLAGS} Threads::Threads)
+endif()
+
+if(NOT TARGET console_bridge::console_bridge)
+  add_library(console_bridge::console_bridge INTERFACE IMPORTED)
+  set_target_properties(console_bridge::console_bridge PROPERTIES INTERFACE_INCLUDE_DIRECTORIES
+                                                                  ${console_bridge_INCLUDE_DIRS})
+  set_target_properties(console_bridge::console_bridge PROPERTIES INTERFACE_LINK_LIBRARIES ${console_bridge_LIBRARIES})
+else()
+  get_target_property(CHECK_INCLUDE_DIRECTORIES console_bridge::console_bridge INTERFACE_INCLUDE_DIRECTORIES)
+  if(NOT ${CHECK_INCLUDE_DIRECTORIES})
+    set_target_properties(console_bridge::console_bridge PROPERTIES INTERFACE_INCLUDE_DIRECTORIES
+                                                                    ${console_bridge_INCLUDE_DIRS})
+  endif()
+endif()
+
 if(NOT TARGET Eigen3::Eigen)
   find_package(Threads REQUIRED)
   add_library(Eigen3::Eigen IMPORTED INTERFACE)
@@ -10,27 +33,41 @@ if(NOT TARGET Eigen3::Eigen)
   set_property(TARGET Eigen3::Eigen PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${EIGEN3_INCLUDE_DIRS})
 endif()
 
-# Interface Library
-add_library(${PROJECT_NAME}_core INTERFACE)
-target_link_libraries(${PROJECT_NAME}_core INTERFACE Eigen3::Eigen)
-target_cxx_version(${PROJECT_NAME}_core INTERFACE VERSION ${DESCARTES_CXX_VERSION})
-target_compile_options(${PROJECT_NAME}_core INTERFACE ${DESCARTES_COMPILE_OPTIONS})
-target_compile_definitions(${PROJECT_NAME}_core INTERFACE ${DESCARTES_COMPILE_DEFINITIONS})
+add_library(
+  ${PROJECT_NAME}
+  # Edge Evaluators
+  src/edge_evaluators/timing_edge_evaluator.cpp
+  src/edge_evaluators/euclidean_distance_edge_evaluator.cpp
+  src/edge_evaluators/compound_edge_evaluator.cpp
+  src/edge_evaluators/normalized_edge_evaluator.cpp
+  # State Evaluators
+  src/state_evaluators/euclidean_distance_state_evaluator.cpp
+  src/state_evaluators/normalized_state_evaluator.cpp
+  # Samplers
+  src/samplers/fixed_joint_pose_sampler.cpp
+  # Solvers
+  src/solvers/ladder_graph/ladder_graph_solver.cpp
+  src/solvers/ladder_graph/ladder_graph.cpp
+  src/solvers/ladder_graph/ladder_graph_dag_search.cpp)
+target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen OpenMP::OpenMP_CXX console_bridge::console_bridge)
+target_cxx_version(${PROJECT_NAME} PUBLIC VERSION ${DESCARTES_CXX_VERSION})
+target_compile_options(${PROJECT_NAME} PUBLIC ${DESCARTES_COMPILE_OPTIONS})
+target_compile_definitions(${PROJECT_NAME} PUBLIC ${DESCARTES_COMPILE_DEFINITIONS})
 target_clang_tidy(
-  ${PROJECT_NAME}_core
+  ${PROJECT_NAME}
   ENABLE ${DESCARTES_ENABLE_CLANG_TIDY}
   WARNINGS_AS_ERRORS ${DESCARTES_ENABLE_TESTING}
   CHECKS ${DEFAULT_CLANG_TIDY_CHECKS})
 target_code_coverage(
-  ${PROJECT_NAME}_core
-  INTERFACE
+  ${PROJECT_NAME}
+  PUBLIC
   ALL
   ENABLE ${DESCARTES_ENABLE_TESTING})
-target_include_directories(${PROJECT_NAME}_core INTERFACE "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-                                                          "$<INSTALL_INTERFACE:include>")
+target_include_directories(${PROJECT_NAME} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+                                                  "$<INSTALL_INTERFACE:include>")
 
 install(
-  TARGETS ${PROJECT_NAME}_core
+  TARGETS ${PROJECT_NAME}
   EXPORT ${PROJECT_NAME}-targets
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
