--- a/descartes_light/test/CMakeLists.txt
+++ b/descartes_light/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Utilities Library
 add_library(${PROJECT_NAME}_test_utils src/utils.cpp src/solver_factory.cpp)
-target_link_libraries(${PROJECT_NAME}_test_utils PUBLIC ${PROJECT_NAME}_core ${PROJECT_NAME}_solvers)
+target_link_libraries(${PROJECT_NAME}_test_utils PUBLIC ${PROJECT_NAME} ${PROJECT_NAME}_bgl)
 target_cxx_version(${PROJECT_NAME}_test_utils PUBLIC VERSION ${DESCARTES_CXX_VERSION})
 target_compile_options(${PROJECT_NAME}_test_utils PUBLIC ${DESCARTES_COMPILE_OPTIONS})
 target_compile_definitions(${PROJECT_NAME}_test_utils PUBLIC ${DESCARTES_COMPILE_DEFINITIONS})
@@ -27,8 +27,8 @@ find_gtest()
 add_executable(${PROJECT_NAME}_utest utest.cpp)
 target_link_libraries(
   ${PROJECT_NAME}_utest
-  PRIVATE ${PROJECT_NAME}_edge_evaluators
-          ${PROJECT_NAME}_solvers
+  PRIVATE ${PROJECT_NAME}
+          ${PROJECT_NAME}_bgl
           ${PROJECT_NAME}_test_utils
           GTest::GTest
           GTest::Main)
