--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -11,9 +11,7 @@ on:
 jobs:
   windows_ci:
     name: Noetic
-    runs-on: windows-latest
-    env:
-      ROS_DISTRO: noetic
+    runs-on: windows-2019
     steps:
     - uses: actions/checkout@v2
       with:
@@ -22,16 +20,18 @@ jobs:
     - name: Build
       shell: cmd
       run: |
-        choco sources add -n=roswin -s https://aka.ms/ros/public --priority 1
-        choco install ros-%ROS_DISTRO%-desktop_full -y --no-progress
+        set ChocolateyInstall=C:\opt\chocolatey
+        choco sources add -n=ros-win -s="https://aka.ms/ros/public" --priority=1
 
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.bat" -arch=amd64 -host_arch=amd64
-        call "C:\opt\ros\%ROS_DISTRO%\x64\setup.bat"
 
+        python -m pip install vcstool -q
+        python -m pip install colcon-common-extensions -q
         choco install console_bridge -y --no-progress
-        choco install clapack -y --no-progress
-        choco install openblas -y --no-progress
+        choco install boost -y --no-progress
+        choco install eigen -y --no-progress
+        refreshenv
 
         vcs import --input "${{ github.workspace }}/src/descartes_light/dependencies.rosinstall" src/
 
-        catkin_make_isolated --cmake-args -DCMAKE_BUILD_TYPE=Release -DDESCARTES_ENABLE_TESTING=ON
+        colcon build --cmake-args -DCMAKE_BUILD_TYPE=Release -DDESCARTES_ENABLE_TESTING=ON -DCMAKE_PREFIX_PATH=C:\opt\rosdeps
